# ferret

./: .env.example  .gitignore  CLAUDE.md  FRAUD_DETECTION_README.md  README.md  SPEC.md  WEEKLY_BUILD_PLAN.md  agent.py  console.py  daily_scan.py  ferret_repl.py  find_covid_fraud.py  find_fraud_patterns.py  find_shell_networks.py  fraud_detector.py  fraud_patterns.py  fraud_scorer.py  pyproject.toml  scan_exclusions_for_contracts.py  tools.py
.claude/commands/: pr.md
.claude/skills/: fraud-investigator
data_sources/: __init__.py  bulk_data.py  sam_gov.py  sec_edgar.py  usaspending.py  web_research.py
detectors/: __init__.py  address.py  benford.py  competition.py  comprehensive_detector.py  employee_revenue.py  modifications.py  pricing.py  registration.py  shell_company.py  temporal.py
skills/fraud-investigator/: SKILL.md
